--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ web-sys = { version = "0.3.35", features = [
     ] }
 wasm-bindgen = "0.2.58"
 console_error_panic_hook = "0.1.6"
+anyhow = "1.0.26"
 
 [[bin]]
 name = "wasmTest"
